# RAG-Dworld

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
config/: __init__.py  access_audit.json  guardrails.generated.json  guardrails_loader.py  personas.py  sample_flows.py  sources.py
deploy/: Caddyfile  dream-arabia.service
docs/: Dream_Arabia_Persona_Training_Matrix_2.xlsx  RUNNING_ON_VM.md
knowledge_base/cross_entity/: cross_entity_edges.json
knowledge_base/datasaudi/: al_riyadh.md  en.md  hajj.md  internationally_reported_indicators.md  umrah.md
knowledge_base/diriyah/: en.md  news.md  plan_your_visit.md  things_to_do.md
knowledge_base/ecza/: about_ecza.md  board_of_directors.md  en.md  general_secretary.md  knowledge_center.md  statute_enpdf.md
knowledge_base/experiencealula/: contact_us.md  en.md  flagshipbrochurespdf_enpdf.md  forever_revitalising.md  index.md
knowledge_base/hrsd/: care_about_you.md  en.md  knowledge_centre.md  ministry.md  ministry_services.md
knowledge_base/investsaudi/: en.md  index.md
knowledge_base/kafd/: accelerate.md  en.md  envision.md  live.md  office.md
knowledge_base/kau/: ar.md  contact_us.md  en.md  index.md  university_life.md
scripts/: audit_source_access.py  run_sample_conversations.py  scrape_on_vm.sh  scrape_sources.py  serve_on_vm.sh
tests/: test_access_audit.py  test_agent.py  test_api.py  test_config.py  test_crawl.py  test_fixtures.py  test_graph_build.py  test_guardrails.py  test_pdf_extractor.py  test_query_engine.py  test_sample_conversations.py  test_scraper.py
(+117 files in other folders)
